# pdf_rag

./: .gitignore  pyproject.toml  test_ollama.py
app/: rag_chain.py  server.py
importer/: load_and_process.py
